// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceSettings matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="deviceSettings.headerText"
  />
  <Connect(InterfaceNotFoundMessageBox) />
</Fragment>
`;

exports[`components/devices/deviceSettings matches snapshot with one twinWithSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="deviceSettings.headerText"
  />
  <DeviceSettingsPerInterface
    deviceId={null}
    history={
      Object {
        "location": Object {
          "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
        },
      }
    }
    interfaceId="urn:contoso:com:EnvironmentalSensor:1"
    interfaceName="environmentalSensor"
    isLoading={false}
    location={
      Object {
        "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
      }
    }
    match={Object {}}
    patchDigitalTwinInterfaceProperties={[MockFunction]}
    refresh={[MockFunction]}
    setInterfaceId={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    twinWithSchema={
      Array [
        Object {
          "desiredTwin": 123,
          "reportedTwin": null,
          "settingModelDefinition": Object {
            "@type": "Property",
            "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "displayName": "Brightness Level",
            "name": "brightness",
            "schema": "long",
            "writable": true,
          },
          "settingSchema": Object {
            "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "title": "brightness",
            "type": "number",
          },
        },
      ]
    }
  />
</Fragment>
`;

exports[`devicePropertiesPerInterface matches snapshot 1`] = `
<div
  className="pnp-detail-list scrollable-lg ms-Grid"
>
  <div
    className="non-writable-properties"
  >
    <StyledWithViewportComponent
      checkboxVisibility={2}
      columns={
        Array [
          Object {
            "fieldName": "name",
            "isMultiline": true,
            "isResizable": true,
            "key": "name",
            "maxWidth": 500,
            "minWidth": 100,
            "name": "deviceProperties.columns.name",
          },
          Object {
            "fieldName": "schema",
            "isResizable": true,
            "key": "schema",
            "maxWidth": 200,
            "minWidth": 100,
            "name": "deviceProperties.columns.schema",
          },
          Object {
            "fieldName": "unit",
            "isResizable": true,
            "key": "unit",
            "maxWidth": 200,
            "minWidth": 100,
            "name": "deviceProperties.columns.unit",
          },
          Object {
            "fieldName": "value",
            "isResizable": true,
            "key": "value",
            "minWidth": 150,
            "name": "deviceProperties.columns.value",
          },
        ]
      }
      items={
        Array [
          Object {
            "propertyModelDefinition": Object {
              "@type": "Property",
              "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "displayName": "Brightness Level",
              "name": "brightness",
              "schema": "long",
              "writable": true,
            },
            "propertySchema": Object {
              "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "title": "brightness",
              "type": "number",
            },
            "reportedTwin": null,
          },
        ]
      }
      layoutMode={1}
      onRenderItemColumn={[Function]}
    />
  </div>
</div>
`;
